--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -39,7 +39,7 @@
 
     <!--====== PRELOADER PART START ======-->
 
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="loader_34">
             <div class="ytp-spinner">
                 <div class="ytp-spinner-container">
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!--====== PRELOADER ENDS START ======-->
 
@@ -67,7 +67,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="{% static 'images/logo.png' %}" alt="Logo">
+                                <img src="{% static 'images/new-logo-1.png' %}" alt="Logo">
                             </a> <!-- Logo -->
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -83,7 +83,7 @@
                                     <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#service">Services</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#work">Portfolio</a></li>
-                                    <li class="nav-item"><a class="page-scroll" href="#blog">Blog</a></li>
+                                    <li class="nav-item"><a class="page-scroll" href="{% url 'blog' %}">Blog</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -533,7 +533,7 @@
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title">EPOK</h3>
+                                <h3 class="work-title font-weight-bold">EPOK</h3>
                                 <ul>
                                     <li><a class="image-popup" href="{% static 'images/work/w-2.jpg' %}"><i
                                                 class="lni lni-frame-expand"></i></a></li>
@@ -550,7 +550,7 @@
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title">Your Essay Master</h3>
+                                <h3 class="work-title font-weight-bold">Your Essay Master</h3>
                                 <ul>
                                     <li><a class="image-popup" href="{% static 'images/work/w-3.jpg' %}"><i
                                                 class="lni lni-frame-expand"></i></a></li>
@@ -567,7 +567,7 @@
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title">Hairways</h3>
+                                <h3 class="work-title font-weight-bold">Hairways</h3>
                                 <ul>
                                     <li><a class="image-popup" href="{% static 'images/work/w-4.jpg' %}"><i
                                                 class="lni lni-frame-expand"></i></a></li>
@@ -584,7 +584,7 @@
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title">SWIFA</h3>
+                                <h3 class="work-title font-weight-bold">SWIFA</h3>
                                 <ul>
                                     <li><a class="image-popup" href="{% static 'images/work/w-5.jpg' %}"><i
                                                 class="lni lni-frame-expand"></i></a></li>
@@ -601,7 +601,7 @@
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title">MPesa Integration</h3>
+                                <h3 class="work-title font-weight-bold">MPesa Integration</h3>
                                 <ul>
                                     <li><a class="image-popup" href="{% static 'images/work/w-1.jpg' %}"><i
                                                 class="lni lni-frame-expand"></i></a></li>
@@ -618,7 +618,7 @@
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title">Django Start Project Tool</h3>
+                                <h3 class="work-title font-weight-bold">Django Start Project Tool</h3>
                                 <ul>
                                     <li><a class="image-popup" href="{% static 'images/work/w-6.jpg' %}"><i
                                                 class="lni lni-frame-expand"></i></a></li>
@@ -805,7 +805,7 @@
                     <div class="col-lg-8">
                         <div class="footer-content text-center">
                             <a href="index.html">
-                                <img src="{% static 'images/logo-2.png' %}" alt="Logo">
+                                <img src="{% static 'images/new-logo-1.png' %}" alt="Logo">
                             </a>
                             <p class="mt-">A creative software developer with a 3+ years experience in developing
                                 efficient and reliable software products for
