Polishing up portifolio and blog for a MVP

--- a/portifolio/templates/blog.html
+++ b/portifolio/templates/blog.html
@@ -10,7 +10,7 @@
 {% block sidebar %}
 	<div id="navigation" class="collapse navbar-collapse flex-column">
 		<div class="profile-section pt-3 pt-lg-0">
-			<img class="profile-image mb-3 rounded-circle mx-auto" src="{% static 'blog/images/profile.png' %}"
+			<img class="profile-image mb-3 rounded-circle mx-auto" src="{% static 'blog/images/blog/blog-pic-circle-1.png' %}"
 				alt="image">
 
 			<h4 class="bio mb-2 text-white">Hi, my name is Leleruk Jaymoh. A Full-Stack developer in 💓 with
