--- a/portifolio/templates/about.html
+++ b/portifolio/templates/about.html
@@ -82,7 +82,7 @@
 			    <h5 class="mt-5">Side Projects</h5>
 			    <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
 			    
-			    <figure><a href="https://made4dev.com"><img class="img-fluid" src="assets/images/promo-banner.jpg" alt="image"></a></figure>
+			    <figure><a href="#"><img class="img-fluid" src="assets/images/promo-banner.jpg" alt="image"></a></figure>
 		    </div>
 	    </article><!--//about-section-->
 	    
