--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -11,10 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>Leleruk Jaymoh - Experienced Fullstack developer, Python(Django), Tech enthusiast </title>
+    <title>Leleruk Jaymoh - Experienced Fullstack developer, Python(Django) developer, Tech enthusiast </title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/png">
+    <link rel="shortcut icon" href="{% static 'images/new-logo-1.png' %}" type="image/png">
 
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -130,7 +130,7 @@
                         <div class="header-content-right">
                             <h4 class="sub-title">Hello, I’m</h4>
                             <h1 class="title">Leleruk Jaymoh</h1>
-                            <p>A Fullstack Web Developer, Python(Django) & Tech enthusiast</p>
+                            <p>A Fullstack Web Developer, Python(Django) developer & Tech enthusiast</p>
                             <a class="main-btn" href="#work">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
@@ -529,13 +529,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="{% static 'images/work/w-2.jpg' %}" alt="work">
+                            <img src="{% static 'images/work/epok.png' %}" alt="work">
                         </div>
-                        <div class="work-overlay">
+                        <div data-toggle="tooltip" title="Epok is a Non-organisation website i did for a client. More content about the project will be provided later" class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">EPOK</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="{% static 'images/work/w-2.jpg' %}"><i
+                                    <li><a class="image-popup" href="{% static 'images/work/epok.png' %}"><i
                                                 class="lni lni-frame-expand"></i></a></li>
                                     <li><a href="#"><i class="lni lni-link"></i></a></li>
                                 </ul>
@@ -546,9 +546,9 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="{% static 'images/work/w-3.jpg' %}" alt="work">
+                            <img src="{% static 'images/work/youressaymaster.png' %}" alt="work">
                         </div>
-                        <div class="work-overlay">
+                        <div data-toggle="tooltip" title="A website for managing essay writing business i did for a client. More content about the project will be provided later" class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">Your Essay Master</h3>
                                 <ul>
@@ -563,13 +563,13 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="{% static 'images/work/w-4.jpg' %}" alt="work">
+                            <img src="{% static 'images/work/salon.png' %}" alt="work">
                         </div>
-                        <div class="work-overlay">
+                        <div data-toggle="tooltip" title="A salon management system. More content about the project will be provided later" class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">Hairways</h3>
                                 <ul>
-                                    <li><a class="image-popup" href="{% static 'images/work/w-4.jpg' %}"><i
+                                    <li><a class="image-popup" href="{% static 'images/work/salon.jpg' %}"><i
                                                 class="lni lni-frame-expand"></i></a></li>
                                     <li><a href="#"><i class="lni lni-link"></i></a></li>
                                 </ul>
@@ -580,9 +580,9 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="{% static 'images/work/w-5.jpg' %}" alt="work">
+                            <img src="{% static 'images/work/swifa-1.png' %}" alt="work">
                         </div>
-                        <div class="work-overlay">
+                        <div data-toggle="tooltip" title="Swifa is a Non-organisation website i did for a client. More content about the project will be provided later" class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">SWIFA</h3>
                                 <ul>
@@ -597,11 +597,11 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="{% static 'images/work/w-1.jpg' %}" alt="work">
+                            <img src="{% static 'images/work/mpesa.png' %}" alt="work">
                         </div>
-                        <div class="work-overlay">
+                        <div data-toggle="tooltip" title="I have done several Mpesa Integrations for clients and personal projects. More content about the project will be provided later" class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title font-weight-bold">MPesa Integration</h3>
+                                <h3 class="work-title font-weight-bold">MPesa Integrations</h3>
                                 <ul>
                                     <li><a class="image-popup" href="{% static 'images/work/w-1.jpg' %}"><i
                                                 class="lni lni-frame-expand"></i></a></li>
@@ -614,9 +614,9 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="{% static 'images/work/w-6.jpg' %}" alt="work">
+                            <img src="{% static 'images/work/django-start-project.gif' %}" alt="work">
                         </div>
-                        <div class="work-overlay">
+                        <div data-toggle="tooltip" title="A tool I created to help me start off django project easily and quickly. More content about the project will be provided later" class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">Django Start Project Tool</h3>
                                 <ul>
@@ -630,7 +630,7 @@
                 </div>
             </div> <!-- row -->
             <div class="row">
-                <div class="col-lg-12">
+                <div data-toggle="tooltip" title="A page for viewing more projects i have worked on will be available soon." class="col-lg-12">
                     <div class="work-more text-center mt-50">
                         <a class="main-btn" href="#">more works</a>
                     </div> <!-- work more -->
@@ -671,7 +671,7 @@
                             <img src="{% static 'images/blog/b-1.jpg' %}" alt="Blog">
                         </div>
                         <div class="blog-content">
-                            <h4 class="blog-title"><a href="#">Who is Leleruk Jaymoh?</a></h4>
+                            <h4 class="blog-title"><a href="{% url 'blog' %}">A story of how I built my Portfolio and Blog?</a></h4>
                             <span>July 26, 2022</span>
                         </div>
                     </div> <!-- single blog -->
