--- a/portifolio/templates/includes/header.html
+++ b/portifolio/templates/includes/header.html
@@ -6,6 +6,17 @@
 <head>
     <title>{% block title %} {% endblock title %}</title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161731477-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-161731477-1');
+    </script>
+
+
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
