--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -13,6 +13,17 @@
     <!--====== Title ======-->
     <title>Leleruk Jaymoh - Experienced Fullstack developer, Python(Django) developer, Tech enthusiast </title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161731477-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-161731477-1');
+    </script>
+
+
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="{% static 'images/new-logo-1.png' %}" type="image/png">
 
