--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -48,27 +48,6 @@
 
 <body>
 
-    <!--====== PRELOADER PART START ======-->
-
-    <!-- <div class="preloader">
-        <div class="loader_34">
-            <div class="ytp-spinner">
-                <div class="ytp-spinner-container">
-                    <div class="ytp-spinner-rotator">
-                        <div class="ytp-spinner-left">
-                            <div class="ytp-spinner-circle"></div>
-                        </div>
-                        <div class="ytp-spinner-right">
-                            <div class="ytp-spinner-circle"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
-    <!--====== PRELOADER ENDS START ======-->
-
     <!--====== HEADER PART START ======-->
 
     <header id="home" class="header-area">
@@ -542,7 +521,9 @@
                         <div class="work-image">
                             <img src="{% static 'images/work/epok.png' %}" alt="work">
                         </div>
-                        <div data-toggle="tooltip" title="Epok is a Non-organisation website i did for a client. More content about the project will be provided later" class="work-overlay">
+                        <div data-toggle="tooltip"
+                            title="Epok is a Non-organisation website i did for a client. More content about the project will be provided later"
+                            class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">EPOK</h3>
                                 <ul>
@@ -559,7 +540,9 @@
                         <div class="work-image">
                             <img src="{% static 'images/work/youressaymaster.png' %}" alt="work">
                         </div>
-                        <div data-toggle="tooltip" title="A website for managing essay writing business i did for a client. More content about the project will be provided later" class="work-overlay">
+                        <div data-toggle="tooltip"
+                            title="A website for managing essay writing business i did for a client. More content about the project will be provided later"
+                            class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">Your Essay Master</h3>
                                 <ul>
@@ -574,9 +557,11 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="{% static 'images/work/salon.png' %}" alt="work">
+                            <img src="{% static 'images/work/salon.jpg' %}" alt="work">
                         </div>
-                        <div data-toggle="tooltip" title="A salon management system. More content about the project will be provided later" class="work-overlay">
+                        <div data-toggle="tooltip"
+                            title="A salon management system. More content about the project will be provided later"
+                            class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">Hairways</h3>
                                 <ul>
@@ -591,9 +576,11 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="{% static 'images/work/swifa-1.png' %}" alt="work">
+                            <img src="{% static 'images/work/swifa.png' %}" alt="work">
                         </div>
-                        <div data-toggle="tooltip" title="Swifa is a Non-organisation website i did for a client. More content about the project will be provided later" class="work-overlay">
+                        <div data-toggle="tooltip"
+                            title="Swifa is a Non-organisation website i did for a client. More content about the project will be provided later"
+                            class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">SWIFA</h3>
                                 <ul>
@@ -610,7 +597,9 @@
                         <div class="work-image">
                             <img src="{% static 'images/work/mpesa.png' %}" alt="work">
                         </div>
-                        <div data-toggle="tooltip" title="I have done several Mpesa Integrations for clients and personal projects. More content about the project will be provided later" class="work-overlay">
+                        <div data-toggle="tooltip"
+                            title="I have done several Mpesa Integrations for clients and personal projects. More content about the project will be provided later"
+                            class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">MPesa Integrations</h3>
                                 <ul>
@@ -627,7 +616,9 @@
                         <div class="work-image">
                             <img src="{% static 'images/work/django-start-project.gif' %}" alt="work">
                         </div>
-                        <div data-toggle="tooltip" title="A tool I created to help me start off django project easily and quickly. More content about the project will be provided later" class="work-overlay">
+                        <div data-toggle="tooltip"
+                            title="A tool I created to help me start off django project easily and quickly. More content about the project will be provided later"
+                            class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title font-weight-bold">Django Start Project Tool</h3>
                                 <ul>
@@ -641,7 +632,8 @@
                 </div>
             </div> <!-- row -->
             <div class="row">
-                <div data-toggle="tooltip" title="A page for viewing more projects i have worked on will be available soon." class="col-lg-12">
+                <div data-toggle="tooltip"
+                    title="A page for viewing more projects i have worked on will be available soon." class="col-lg-12">
                     <div class="work-more text-center mt-50">
                         <a class="main-btn" href="#">more works</a>
                     </div> <!-- work more -->
@@ -679,10 +671,11 @@
                 <div class="col-lg-4 col-md-8 col-sm-9">
                     <div class="single-blog mt-30">
                         <div class="blog-image">
-                            <img src="{% static 'images/blog/b-1.jpg' %}" alt="Blog">
+                            <img src="{% static 'images/blog/my-blog.png' %}" alt="Blog">
                         </div>
                         <div class="blog-content">
-                            <h4 class="blog-title"><a href="{% url 'blog' %}">A story of how I built my Portfolio and Blog?</a></h4>
+                            <h4 class="blog-title"><a href="{% url 'blog' %}">A story of how I built my Portfolio and
+                                    Blog?</a></h4>
                             <span>July 26, 2022</span>
                         </div>
                     </div> <!-- single blog -->
@@ -822,10 +815,12 @@
                                 efficient and reliable software products for
                                 clients. Has a love for automating tasks, solving coding problems and debugging code</p>
                             <ul>
-                                <li><a href="#"><i class="lni lni-facebook-filled"></i></a></li>
-                                <li><a href="#"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="#"><i class="lni lni-github"></i></a></li>
-                                <li><a href="#"><i class="lni lni-linkedin-original"></i></a></li>
+                                <li><a href="facebook.com/Jaymoh_kish"><i class="lni lni-facebook-filled"></i></a></li>
+                                <li><a href="https://twitter.com/Jaymoh_kish"><i
+                                            class="lni lni-twitter-original"></i></a></li>
+                                <li><a href="https://github.com/lelerukjaymoh"><i class="lni lni-github"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/james-kamau-855599158/"><i
+                                            class="lni lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
                     </div>
@@ -836,16 +831,18 @@
 
     <!--====== FOOTER PART ENDS ======-->
 
-    <!--====== BACK TOP TOP PART START ======-->
 
-    <a href="#" class="back-to-top"><i class="lni lni-chevron-up"></i></a>
-
-    <!--====== BACK TOP TOP PART ENDS ======-->
-
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 
-
-
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
 
 
     <!--====== jquery js ======-->
